--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,74 @@
-# This file is used for Git repositories to specify intentionally untracked files that Git should ignore. 
-# If you are not using git, you can delete this file. For more information see: https://git-scm.com/docs/gitignore
-# For useful gitignore templates see: https://github.com/github/gitignore
-
-# Salesforce cache
-.sfdx/
-.localdevserver/
+# IDE
 .vscode/
+.vim-force.com/
+.idea/
+e2e/.idea/
 
-# LWC VSCode autocomplete
-**/lwc/jsconfig.json
-
-# LWC Jest coverage reports
-coverage/
-
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Dependency directories
+# LWC unit tests
 node_modules/
 
-# Eslint cache
-.eslintcache
+# SFDX
+.sfdx/
+.sf/
+mdapi/
+*.log
+forceApp/default/
+sfdx-project.json
 
-# MacOS system files
+# Deploy
+build.properties
+artifacts
+bin/
+
+# Mac
 .DS_Store
 
-# Windows system files
-Thumbs.db
-ehthumbs.db
-[Dd]esktop.ini
-$RECYCLE.BIN/
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+.idea/sonarlint
+.project
+e2e/.classpath
+e2e/.settings
 
-# Local environment variables
-.env
+# Generated files
+.idea/**/contentModel.xml
+
+# Sensitive or high-churn files
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+.idea/**/dbnavigator.xml
+
+# Gradle
+.idea/**/gradle.xml
+.idea/**/libraries
+
+# Gradle and Maven with auto-import
+# When using Gradle or Maven with auto-import, you should exclude module files,
+# since they will be recreated, and may cause churn.  Uncomment if using
+# auto-import.
+.idea/modules.xml
+.idea/*.iml
+e2e/*.iml
+*.iml
+.idea/modules
+
+# File-based project format
+*.iws
+
+target/
+.allure/
+/IlluminatedCloud/
+coverage/
+test_reports/
+
+forceApp/main/
+
+package-lock.json
